fix(GenreFilter): add dynamic gap

--- a/src/components/GenreFilter/GenreFilter.module.scss
+++ b/src/components/GenreFilter/GenreFilter.module.scss
@@ -24,7 +24,7 @@
     width: calc(100% - 45px);
     overflow-x: auto;
     scroll-behavior: smooth;
-    gap: 10px;
+    gap: var(--gap);
     scrollbar-width: none;
     -ms-overflow-style: none;
 
